force-app/main/default/objects/Product2/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Type 2 remission</fullName>
            </value>
            <value>
                <fullName>Insulin users</fullName>
            </value>
            <value>
                <fullName>Prediabetes</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
</CustomField>