force-app/main/default/objects/Product2/fields/Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>Duration_Months__c</fullName>
    <label>Duration (months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>