force-app/main/default/objects/Product2/fields/Includes_CGM__c.field-meta.xml
<CustomField>
    <fullName>Includes_CGM__c</fullName>
    <label>Includes CGM</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>