force-app/main/default/objects/Product2/fields/Product_Kind__c.field-meta.xml
<CustomField>
    <fullName>Product_Kind__c</fullName>
    <label>Product Kind</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>Device kit</fullName>
            </value>
            <value>
                <fullName>Refill pack</fullName>
            </value>
            <value>
                <fullName>Lab panel</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
    <required>true</required>
</CustomField>