force-app/main/default/objects/Product2/fields/Requires_Clearance__c.field-meta.xml
<CustomField>
    <fullName>Requires_Clearance__c</fullName>
    <label>Requires Clearance</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>